tests/errors/syntax_errors/not_implemented.py
# pylint: disable=missing-function-docstring, missing-module-docstring/

b = 1

a @= b

c = all(True for i in range(5))
